fix white space by setting body>margin:0

--- a/portfolio.css
+++ b/portfolio.css
@@ -6,15 +6,21 @@
 * {
   box-sizing: border-box;
   font-family: sans-serif;
+}
+body {
+  overflow-x: hidden;
   margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 #navbar {
+  width: 100vw;
   text-align: right;
   background-color: #be3144;
   position: fixed;
   top: 0;
-  width: 100vw;
   box-shadow: 1px 1px 1px rgb(24, 24, 24);
 }
 
